--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "starter_html_sass",
   "version": "1.0.0",
-  "description": "",
   "scripts": {
     "watch": "sass --watch asset/style/index.scss build/style.css"
   },
@@ -11,5 +10,8 @@
     "@fortawesome/fontawesome-free": "^6.3.0",
     "bootstrap": "^5.2.3",
     "sass": "^1.60.0"
-  }
+  },
+  "main": "index.js",
+  "keywords": [],
+  "description": ""
 }
